--- a/rng_game-main/rng_game/index.html
+++ b/rng_game-main/rng_game/index.html
@@ -9,12 +9,13 @@
 <body>
     <h1>RNG Roll Game</h1>
     <button class="button" id="rollButton" onclick="roll()">Roll!</button>
-    <div class="spinner" id="spinner"></div>
     <div class="result" id="result">Click the button to roll!</div>
+    <div class="rolesleft" id="rolesleft">Rolls Left: 5</div> <!-- Added this line -->
     <div class="inventory">
         <h2>Your Inventory:</h2>
         <ul id="inventory" class="inventory-list"></ul>
     </div>    
+    <div id="inventory"></div>
     <script src="script.js"></script>
 </body>
 </html>
