--- a/rng_game-main/rng_game/index.html
+++ b/rng_game-main/rng_game/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <h1>RNG Roll Game</h1>
-    <button class="button" id="rollButton" onclick="roll()">Roll!</button>
+    <button class="button" id="rollButton1" onclick="roll()">Roll! 1</button>
+    <button class="button" id="rollButton2" onclick="rollx10()">Roll! 10</button>
+    <button class="button" id="rollButton3" onclick="rollx100()">Roll! 100</button>
+    <button class="button" id="rollButton4" onclick="rollx1000()">Roll! 1000</button>
+    <button class="button" id="rollButton5" onclick="rollx10000()">Roll! 10000</button>
+    <button class="button" id="rollButton6" onclick="rollx100000()">Roll! 100000</button>
+    <button class="button" id="rollButton6" onclick="rollx1000000()">Roll! 1000000</button>
     <div class="result" id="result">Click the button to roll!</div>
     <div class="rolesleft" id="rolesleft">Rolls Left: 5</div> <!-- Added this line -->
     <div class="inventory">
